# texpack

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.bat  build.sh  build_debug.bat  build_release.bat  clean.bat  debug.bat  release.bat
.github/workflows/: build-ubuntu.yml  build-windows.yml
src/: license.h  main.cpp  types.h
tools/debug/: texpack.sln
